# website-server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  default.nix  docker-compose.yml  flake.nix  module.nix
.github/workflows/: main.yml  nix.yml
.sqlx/: query-011f364baa8aaf5e46b50131103da23216c9f114975ea577167243c49f054bf6.json  query-03a669665fc8800cb9834b4f12b2531803b8a77b39aad87a4bff6d4e06242ee2.json  query-04ce64f439bc5040a0bb48cd16ced00828d9e91f80f49fafc4ea73ea2f5560a0.json  query-05efb5539aad224365cc7eb8984a70051aff044c5539f095b38aff439f4dcb91.json  query-08b0c79f689e3c57c281d2c4d2c5c2d875f72ba0bbdd7cb4224c35a4333cf8c8.json  query-0ad72772a779efcf1fa43ff0983c043f0ac31c41afca0092751253c8ba5f260e.json  query-0b2b7cfb1860616187b1d4dc5e41a0b0c163626a47afc0a97d1f22ca8cec7463.json  query-0c7971a8f46ed37e2b27e9132229ff8095cf68c3acbacf0644138d9bf9d147b9.json  query-0e8d24b31a452d1e6248106245d89c9bc8fb3deddc40f55e57d449916c9e0d5f.json  query-0eadec9e7b6f785bca38dcb1f0bc704ddda5ee0b88d94f4101f9e18c1db72539.json  query-0fb487d758e222694f4ebf3ce953b584061f6a5bd717aeda19c55d95152de8a0.json  query-1013ca22bf100feffb16b755fddfe206f08eeb446c23c19199822f24c321bab7.json  query-11629b25f7f5059304ec0557af58621e0a69757cbbec453e8e4699cce3d9dd54.json  query-116dd0d7507745ae54f9df865178ccf585a407fd48378a0dd0b5c62325450c15.json  query-11b72d646f946554241dc0dd32a6c5d29efd2d8b1f6f5e3e3084210e6450b7fd.json  query-12b11fbc87b90d9d226d672db2798c3ce398d337d284453586b5862b943af203.json  query-13106d78ce239267d2b5a1539a40f1ad2b425cd55ffa1e3444c05337bb67552b.json  query-1770ea53e6abf9f95b81fa2e143cd71550cc1e97cd1c0df1f2acea8fc2836d33.json  query-186d8d9a7fe09cd51007e57a493952199c93bb23fc818b39166149b08132093f.json  query-194bee54856e6ed2d0ad2cb5dfc8fe95e775722fdfcecbff398fb5b9ddd848d4.json  query-19708f32b21999878a7787b27ed63fc9262216ab2a0488c63ef037871a9d8697.json  query-1d1741d8a055461e901c1f97776960ccf3a750f6d205eb19a735d6c73051b633.json  query-2196d031f97f3e621cde5231778275a4498906cec239de0b188f6dca07b99f09.json  query-244e2429e8f59e19d497cc6d29aee199058d1aa2533aadfada4146acb6daee58.json  query-245b724df984d09e9312bb0066079082ce8d277031d6a5b03e74988cf9387405.json  query-276b95ed301c3358677b1a3498fe2d4664375004ab4115d41bdf9f2f7c1c7991.json  query-293287fec20d7736007efc2bf998a1f8244205cb237de94ea23ec50642b84392.json  query-2c78f278087b2fb777faafad8e35b2268f123e94e54569e94a7f14a4f1566a28.json  query-2d3b2ffb7e74143849803f2bf319d4ff1e4f53388ad5ea0e2d2c92e7d7614b7d.json  query-2e2b4b8adb0de9203e6ec8acee57604cce20b4a7b748fef0627d00ac7046fd83.json  query-2e4617804a2642804e24965fcaa307233f95c9a7ad824f683d1a71c96bc9bcd9.json  query-2f86a185e81c0038b6f8bad5a6c79e1b0a27d63647def6e8d6a1dde0f643347b.json  query-30b9106e6cf6f7df9bfef1dddf55aa36d66c0b7bdfc5b1202d4f688f76aefd5a.json  query-310af66d7c4167091cedbe035f55c33a9ba8c4c13a70485099bfe9da44b8496f.json  query-35e6f1156b8a8581b893bec475e01df7e6652fba3f0b897e2a880437ae98d0ec.json  query-380b1bb31b7a1661d6a9ec7fd244144f1b4e3cabe64ff5d4ad2fa19dcbb894ab.json  query-390a8e6473ecf10d891d81e11205a929f106131c24a7f7d37334fee4a1a52a7a.json  query-3def6dc4178be0215afd0dc8e1eec9c687ba7a2b299e89714822df2bf56ce432.json  query-3e72e8463abb12b3cd1adc944597c659aa7766411c682455b8c3a55230e25ad9.json  query-41e6c3d201b8324af31d26a2721d38416589bb3c9498c9d8bb896609157dfe86.json  (+122 more)
migrations/: 10_replace_sitzung_name_with_type.sql  11_convert_timestamp_to_timestamptz.sql  12_rename_sitzung_type_to_kind.sql  13_rename_sitzung_datum_to_datetime.sql  14_replace_top_type_with_top_kind.sql  15_cascading_delete_antragsstellende.sql  16_cascading_delete_antragstop.sql  17_cascading_delete_tops.sql  18_check_constraint_abmeldungen.sql  19_check_constraint_role_mapping.sql  1_antraege.sql  20_validate_roles.sql  21_remove_role_time_spans.sql  22_cascading_delete_role_mappings.sql  23_more_user_info.sql  24_top_inhalt_is_just_text.sql  25_unique_user_info.sql  26_antragsfrist.sql  27_attachments.sql  28_combine_user_full_name.sql  29_legislative_period.sql  2_tops_are_now_bigint.sql  30_templates.sql  31_stupid_door.sql  32_anonymous_user.sql  33_germanify.sql  3_doorstate.sql  4_person_role_mapping.sql  5_abmeldungen.sql  6_rename_state_to_is_open.sql  7_rename_position_to_weight.sql  8_add_location_to_sitzung.sql  8_made_person_id_primary_key_in_rollen.sql  9_add_top_type.sql
src/: cache.rs  database.rs  main.rs  web.rs
src/database/: abmeldungen.rs  antrag.rs  antrag_top_attachment_map.rs  antrag_top_map.rs  attachment.rs  door_state.rs  doorstate.rs  legislative_period.rs  legislative_periods.rs  mod.rs  persons.rs  sitzungen.rs  templates.rs  tops.rs
src/domain/: anhang.rs  antrag.rs  antrag_top_attachment_map.rs  antrag_top_map.rs  attachment.rs  calendar.rs  door_state.rs  legislative_period.rs  (+8 more)
static/: index.html
templates/: calendar.html
(+63 files in other folders)
