[package]
name = "fscs-website-backend"
authors = [ "Florian Schubert", "Felix Nilles" ]
version = "1.0.0"
edition = "2021"
description = "Backend für Knuts neue Webseite"

[dependencies]
actix-cors = "0"
actix-files = {version = "0", features = [ "experimental-io-uring"]}
actix-http = "3"
actix-utils = "3"
actix-web-validator = "6"
actix-web = { version = "4", features = [ "secure-cookies", "rustls" ] }
anyhow = "1"
async-std = "1"
chrono-tz = "0"
chrono = { version = "0", features = [ "serde" ]}
clap = { version = "4", features = [ "derive", "color" ] }
icalendar = { version = "0.16", features = [ "chrono-tz" ]}
log = "0"
mime = "0"
oauth2 = "4"
pretty_env_logger = "0"
regex = { version = "1"}
reqwest = { version = "0", features = ["blocking", "json", "rustls-tls", "http2", "macos-system-configuration", "charset"], default-features = false }
serde_json = { version = "1", features = [ "raw_value" ]}
serde = { version = "1", features = [ "derive" ] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "json", "chrono" ] }
thiserror = "1"
utoipa-swagger-ui = { version = "8", features = [ "actix-web", "vendored" ] }
utoipauto = "0.2"
utoipa = { version = "5", features = [ "actix_extras", "chrono", "uuid", "openapi_extensions" ] }
uuid = { version = "1", features = [ "v4", "serde" ] }
validator = { version = "0.18", features = ["derive"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { version="1", features = ["full"]}

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.build-override]
debug = false
